
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_1__ ;


typedef scalar_t__ uint16_t ;
struct TYPE_6__ {int wct; int andx_command; int max_buffer; int max_mpx_count; int vc_number; int ANSI_pwlen; int bcc; } ;
typedef TYPE_1__ smb_header ;
typedef TYPE_1__ session_setup_andx_request ;


 unsigned char SESSION_MESSAGE ;
 int SMB_SESSION_SETUP_ANDX ;
 scalar_t__ bswap16 (scalar_t__) ;
 int build_smb_header (TYPE_1__*,int ,int,int,int ,scalar_t__,int ,scalar_t__) ;
 int memcpy (unsigned char*,TYPE_1__*,int) ;
 int memset (TYPE_1__*,int ,int) ;
 unsigned char* push_string (unsigned char*,char*) ;
 scalar_t__ rand () ;
 int write (int,unsigned char*,int) ;

void
request_session_setup_andx (unsigned char *buffer, int fd)
{
  smb_header hdr;
  session_setup_andx_request ssar;
  uint16_t proc_id, mpex_id;
  unsigned char *p;

  proc_id = (uint16_t) rand ();
  mpex_id = (uint16_t) rand ();

  build_smb_header (&hdr, SMB_SESSION_SETUP_ANDX, 0x08, 0x0001, 0, proc_id, 0,
                    mpex_id);

  buffer[0] = SESSION_MESSAGE;
  buffer[1] = 0x0;

  memcpy (buffer + 4, &hdr, sizeof (smb_header));

  p = buffer + 4 + sizeof (smb_header);

  memset (&ssar, 0, sizeof (session_setup_andx_request));
  ssar.wct = 13;
  ssar.andx_command = 0xff;
  ssar.max_buffer = 65535;
  ssar.max_mpx_count = 2;
  ssar.vc_number = 1025;

  ssar.ANSI_pwlen = 1;

  p = buffer + 4 + sizeof (smb_header) + sizeof (session_setup_andx_request);


  p = push_string (p, "");


  p = push_string (p, "");


  p = push_string (p, "WORKGROUP");


  p = push_string (p, "Unix");


  p = push_string (p, "Samba");

  ssar.bcc =
    p - buffer - 4 - sizeof (smb_header) -
    sizeof (session_setup_andx_request);

  memcpy (buffer + 4 + sizeof (smb_header), &ssar,
          sizeof (session_setup_andx_request));


  *(uint16_t *) (buffer + 2) =
    bswap16 ((uint16_t)
             (sizeof (session_setup_andx_request) + sizeof (smb_header) +
              ssar.bcc));

  write (fd, buffer,
         sizeof (session_setup_andx_request) + sizeof (smb_header) + 4 +
         ssar.bcc);
}
